1주차/project_ws/log/build_2024-11-07_10-03-56/turtlebot/stderr.log
  File "/home/bok/project_ws/install/turtlebot/lib/python3.10/site-packages/turtlebot/order_list.py", line 34
    'call_staff'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

